fixed header overflow bug

--- a/src/CSS/header.css
+++ b/src/CSS/header.css
@@ -4,19 +4,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
 }
 
 .title{
     font-family: "Kohinoor Bangla";
     font-weight: 700;
-    font-size: 2.5rem;
+    font-size: 2rem;
 
     background: linear-gradient(181.05deg, #17ACAC 0.9%, #000000 294.55%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-fill-color: transparent;
+
+    margin-right: 4rem;
 }
 
 .nav-buttons{
@@ -24,11 +25,12 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: end;
-    gap: 4rem;
+    gap: 2rem;
     font-family: Inter, sans-serif;
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #444444;
+    margin-right: 4rem;
 }
 
 .nav-buttons > li{
@@ -40,8 +42,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 4rem;
     font-family: Inter, sans-serif;
+    margin-right: 4rem;
 }
 
 .login{
